# volume-init-s3-objects

./: Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: devcontainer.yml  release.yml
src/: main.rs
